# lifely

./: .env.example  .gitignore  README.md  pyproject.toml
lifely-web/: index.html
lifely-web-react/: .env.example  .gitignore  README.md  TAILWIND_V4_LEARNINGS.md  index.html  package-lock.json  package.json
lifely-web-react/src/: App.tsx  index.css
lifely-web-react/src/components/beats/: experiments.tsx  hero.tsx  narrative.tsx  patterns.tsx  people.tsx  places.tsx  rituals.tsx
lifely-web-react/src/components/landing/: hero-text.tsx  landing-page.tsx  message-box.tsx  modals.tsx  processing-view.tsx  (+1 more)
lifely-web-react/src/hooks/: use-countup.ts  use-lifely.ts  use-particles.tsx  use-results.ts  use-scroll-progress.ts
lifely-web-react/src/lib/: types.ts
lifely-web/src/: main.js
lifely-web/src/utils/: api.js  oauth.js
lifely-web/styles/: base.css  landing.css
planning/: README.md  architecture.md  concept.md  experience-concept.md  future-enhancements.md  future-phases.md  hosted-app-plan.md  landing-page-spec.md  phase1-plan.md  phase2-event-summaries.md  results-page-spec.md  status.md  style-guide.md
spikes/: README.md  base.css  base.js  data-preview.html  experiments-grid.html  experiments.html  hero-minimal.html  hero.html  mapHeat.js  narrative.html  patterns.html  people.html  places-gmaps.html  places.html  rituals-tiles.html  rituals.html
src/lifely/: __init__.py  auth.py  cli.py  fetch.py  llm_enrich.py  models.py  normalize.py  places.py  stats.py
workers/llm-proxy/: README.md  wrangler.toml
workers/llm-proxy/src/: index.ts
(+17 files in other folders)
